fix property text alignment

--- a/src/client/src/app/catalogue/interfaces/new/new.page.scss
+++ b/src/client/src/app/catalogue/interfaces/new/new.page.scss
@@ -3,3 +3,7 @@
     width: 6px !important;
     height: 100%;
 }
+
+.color-yellow {
+    color: orange;
+}
